--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,23 @@
 [versions]
-hilt = "2.51.1"
+dagger = "2.51.1"
+hilt = "1.2.0"
 ksp = "2.0.0-1.0.22"
-agp = "8.6.0"
+agp = "8.7.3"
 kotlin = "2.0.0"
 coroutine = "1.8.1"
 kotlinCompose = "1.5.3"
 java = "11"
-coreKtx = "1.13.1"
+coreKtx = "1.15.0"
 
 # app config
 sdk = "34"
 
 # Lifecycle
-lifecycle = "2.8.5"
-activityCompose = "1.9.2"
+lifecycle = "2.8.7"
+activityCompose = "1.9.3"
 
 #UI
-composeBom = "2024.09.00"
+composeBom = "2024.11.00"
 
 # Navigation using raamcosta destination lib
 navigation = "2.1.0-beta09"
@@ -27,7 +28,7 @@ room = "2.6.1"
 # hilt
 hiltNavigation = "1.2.0"
 hiltWork = "1.2.0"
-workRuntime = "2.9.1"
+workRuntime = "2.10.0"
 
 # Image
 coil = "2.6.0"
@@ -69,10 +70,11 @@ room-ksp = { group = "androidx.room", name = "room-compiler", version.ref = "roo
 
 # hilt dependencies
 # work-runtime should be transitively resolved, but safe to add
-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"  }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger"  }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigation"  }
 hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltWork"  }
 work-runtime = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntime"  }
+dagger-ksp = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger"  }
 hilt-ksp = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt"  }
 
 # Image
@@ -88,4 +90,4 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-google-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+google-dagger = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
